# termicap

./: .gitignore  .ignore  README.md  alire.toml  sparklib.gpr  termicap.gpr
docs/: ada-style-guide.md
docs/adr/: 0001-environment-snapshot-storage-strategy.md  0002-multi-candidate-matching-spark-boundary.md  0003-tty-detection-package-structure.md  0004-color-detection-decomposed-helpers.md  0005-force-color-value-parsing-strategy.md  0006-c-wrapper-for-ioctl-tiocgwinsz.md  0007-unicode-level-three-value-enum.md  0008-terminal-id-string-representation-spark-boundary.md  0009-downsampling-return-type.md  0010-override-mode-flat-enum.md  0011-capability-record-package-placement.md  0012-capability-cache-design.md  0013-spark-annotation-split-capabilities.md  0014-c-helper-for-termios-select.md  0015-probe-session-limited-controlled.md  0016-discriminated-record-for-bg-color-results.md  0017-da1-timeout-only-read-loop.md  0018-platform-dispatch-via-source-dirs.md  0019-win32ada-as-ffi-layer.md  0020-cygwin-pty-detection-strategy.md  0021-defer-keyboard-capability-integration.md  0022-batched-single-sentinel-decrpm-mouse-probe.md  0023-mouse-encoding-cascade-order.md  0024-gpm-detection-heuristic.md  0025-mouse-capability-record-shape.md  0026-defer-mouse-capability-integration.md  0027-da1-reuse-vs-fresh-probe.md  0028-graphics-independent-probe-sessions.md  0029-graphics-package-naming.md  0030-terminfo-result-type-strategy.md  0031-defer-clipboard-capability-integration.md  0032-wcwidth-package-placement.md  0033-cell-width-table-representation.md  0034-control-character-width-zero.md  0035-fgpgrp-in-existing-osc-package.md  (+8 more)
examples/: alire.toml  termicap_examples.gpr
gpr/: shared.gpr
src/: termicap-capabilities.adb  termicap-capabilities.ads  termicap-cell_width-tables.adb  termicap-cell_width-tables.ads  termicap-cell_width.adb  termicap-cell_width.ads  termicap-clipboard-io.ads  termicap-clipboard.adb  termicap-clipboard.ads  termicap-color-bg_query-io.adb  termicap-color-bg_query-io.ads  termicap-color-bg_query.adb  termicap-color-bg_query.ads  termicap-color-dark_light-detect.adb  termicap-color-dark_light-detect.ads  termicap-color-dark_light.ads  termicap-color-detection.adb  termicap-color-detection.ads  termicap-color.adb  termicap-color.ads  termicap-da1-io.adb  termicap-da1-io.ads  termicap-da1.adb  termicap-da1.ads  termicap-decrpm-io.adb  termicap-decrpm-io.ads  termicap-decrpm.adb  termicap-decrpm.ads  termicap-dimensions.adb  termicap-dimensions.ads  termicap-downsampling.adb  termicap-downsampling.ads  termicap-environment-capture.adb  termicap-environment-capture.ads  termicap-environment.adb  termicap-environment.ads  termicap-graphics-io.ads  termicap-graphics.adb  termicap-graphics.ads  termicap-hyperlinks.adb  (+32 more)
tests/: alire.toml  termicap_tests.gpr
tools/: format_code.sh  generate_spec_doc.sh  generate_trace_matrix.sh
tools/conformance/shims/haskell/ansi-terminal/: .gitignore  ansi-terminal-shim.cabal  build.cmd  build.sh
tools/conformance/shims/haskell/ansi-terminal/src/: Main.hs
tools/conformance/shims/rust/anstyle-query/: Cargo.toml
tools/conformance/shims/rust/anstyle-query/src/: main.rs
tools/conformance/shims/rust/crossterm/: Cargo.toml
tools/conformance/shims/rust/crossterm/src/: main.rs
tools/conformance/shims/rust/isatty/: Cargo.toml
tools/conformance/shims/rust/isatty/src/: main.rs
tools/conformance/shims/rust/supports-color/: Cargo.toml
tools/conformance/shims/rust/supports-color/src/: main.rs
tools/conformance/shims/rust/supports-hyperlinks-rs/: Cargo.toml
tools/conformance/shims/rust/supports-hyperlinks-rs/src/: main.rs
tools/conformance/shims/rust/termbg/: Cargo.toml
tools/conformance/shims/rust/termbg/src/: main.rs
tools/conformance/shims/rust/viuer/: Cargo.toml
tools/conformance/shims/rust/viuer/src/: main.rs
tools/conformance/shims/rust/xterm-query/: Cargo.toml
tools/conformance/shims/rust/xterm-query/src/: main.rs
(+358 files in other folders)
