cabal-version:      3.0
name:               ansi-terminal-shim
version:            0.1.0.0
synopsis:           Conformance shim for the ansi-terminal Haskell package
license:            MIT
build-type:         Simple

executable ansi-terminal-shim
    main-is:        Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:    base >=4.16 && <5
                    , ansi-terminal
                    , terminal-size
    ghc-options:    -Wall
