[package]
name = "viuer-shim"
version = "0.1.0"
edition = "2021"
publish = false
description = "Conformance shim for viuer (Rust image viewer with kitty/sixel/iterm probes)"

[[bin]]
name = "viuer-shim"
path = "src/main.rs"

[dependencies]
# Sixel detection is feature-gated upstream.
viuer = { version = "0.11", features = ["icy_sixel"] }
serde_json = "1"

[profile.release]
opt-level = 1
debug = false
strip = true
